# barreleye

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: tests.yml
common/: Cargo.toml
common/src/: banner.rs  errors.rs  lib.rs  progress.rs  s3.rs  settings.rs  utils.rs
common/src/chain/: mod.rs  u256.rs
common/src/chain/bitcoin/: client.rs  mod.rs
common/src/chain/bitcoin/models/: block.rs  input.rs  mod.rs  output.rs  transaction.rs
common/src/chain/bitcoin/modules/: balance.rs  coinbase.rs  mod.rs  transfer.rs
common/src/chain/bitcoin/schema/: block.rs  input.rs  mod.rs  output.rs  transaction.rs
common/src/chain/evm/: mod.rs
common/src/chain/evm/models/: block.rs  mod.rs  receipt.rs  transaction.rs
common/src/chain/evm/modules/: balance.rs  token_balance.rs  token_transfer.rs  transfer.rs
common/src/chain/evm/schema/: block.rs  log.rs  mod.rs  receipt.rs  transaction.rs
common/src/db/: mod.rs
common/src/db/migrations/: m20230101_000002_create_networks.rs  m20230101_000005_create_entities.rs  m20230101_000006_create_addresses.rs  m20230101_000007_create_tags.rs  m20230101_000009_create_tokens.rs  m20240101_000001_create_configs.rs  m20240101_000002_create_networks.rs  m20240101_000004_create_api_keys.rs  m20240101_000005_create_entities.rs  m20240101_000006_create_addresses.rs  m20240101_000007_create_tags.rs  m20240101_000008_create_entity_tags.rs  m20240101_000009_create_tokens.rs  mod.rs
common/src/models/: config.rs  mod.rs
common/src/models/db/: address.rs  api_key.rs  config.rs  entity.rs  entity_tag.rs  mod.rs  network.rs  tag.rs  token.rs
common/src/models/warehouse/: amount.rs  balance.rs  link.rs  mod.rs  transfer.rs
common/src/storage/: mod.rs
common/src/warehouse/: clickhouse.rs  duckdb.rs  mod.rs
indexer/: Cargo.toml
indexer/src/: copy.rs  lib.rs  link.rs  process.rs  sync.rs
indexer/src/sanctions/: mod.rs  ofac.rs  ofsi.rs
indexer/src/sanctions/ofac/: mod.rs  structs.rs  utils.rs
indexer_v0/src/: blocks.rs  lib.rs
indexer_v1/: Cargo.toml
indexer_v1/src/: copy.rs  extract.rs  lib.rs  link.rs  process.rs
server/: Cargo.toml
server/src/: errors.rs  lib.rs  utils.rs
server/src/handlers/: mod.rs
server/src/handlers/v0/networks/: create.rs  update.rs
server/src/handlers/v1/: mod.rs
server/src/handlers/v1/addresses/: create.rs  delete.rs  get.rs  list.rs  mod.rs
server/src/handlers/v1/entities/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v1/info/: get.rs
server/src/handlers/v1/keys/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v1/networks/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v1/stats/: get.rs
server/src/handlers/v1/tags/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v1/tokens/: create.rs  delete.rs  get.rs  list.rs
src/: log.rs  main.rs
