[package]
name = "barreleye"
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT"
edition = "2021"
rust-version = "1.80"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "indexer", "explorer"]

[[bin]]
name = "barreleye"
path = "src/main.rs"

[workspace]
members = [ "common", "indexer", "server" ]

[package.metadata.cargo-udeps.ignore]
normal = ["color-eyre"]

[dependencies]
barreleye-common = { path = "./common", version = "0.2.0" }
barreleye-indexer = { path = "./indexer", version = "0.2.0" }
barreleye-server = { path = "./server", version = "0.2.0" }
log = "0.4.22"
color-eyre = "0.6.3"
eyre = "0.6.12"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console = "0.15.8"
