[package]
name = "barreleye"
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.83"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "indexer", "explorer"]

[[bin]]
name = "barreleye"
path = "src/main.rs"

[workspace]
members = [ "common", "indexer", "server" ]

[package.metadata.cargo-udeps.ignore]
normal = ["color-eyre"]

[dependencies]
barreleye-common = { path = "./common", version = "0.2.0" }
barreleye-indexer = { path = "./indexer", version = "0.2.0" }
barreleye-server = { path = "./server", version = "0.2.0" }
log = "0.4.25"
color-eyre = "0.6.3"
eyre = "0.6.12"
dotenvy = "0.15.7"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console = "0.15.10"
