[package]
name = "barreleye-common"
publish = false
description = "Open-source blockchain analytics."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.2.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"
workspace = ".."

[dependencies]
async-trait = "0.1.81"
eyre = "0.6.12"
sea-orm-migration = "1.0.0"
nanoid = "0.4.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4.22"
derive_more = { version = "1.0.0", features = [ "full" ] }
indicatif = "0.17.8"
serde_json = "1.0.122"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
url = "2.5.2"
console = "0.15.8"
exitcode = "1.1.2"
bitcoin = { version = "0.32.2", features = ["default", "serde"] }
directories = "5.0.1"
regex = "1.10.6"
governor = "0.6.3"
base64 = "0.22.1"
itertools = "0.13.0"
futures = "0.3.30"
hex = "0.4.3"
num_cpus = "1.16.0"
bitcoincore-rpc-json = "0.19.0"
duckdb = { version = "1.0.0", features = ["bundled", "parquet"] }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"] }
tokio = { version = "1.39.2", features = ["full"] }
ethers = { version = "2.0.14", features = ["rustls"] }
clickhouse = { version = "0.12.1", features = ["uuid"] }
clap = { version = "4.5.14", features = ["cargo", "derive", "env"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tracing = "0.1.40"
sha2 = "0.10.8"
base58 = "0.2.0"
strum = "0.26"

[dependencies.sea-orm]
version = "1.0.0"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
