[package]
name = "barreleye-common"
publish = false
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.83"
workspace = ".."

[dependencies]
async-trait = "0.1.86"
eyre = "0.6.12"
sea-orm-migration = "1.1.5"
nanoid = "0.4.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4.25"
derive_more = { version = "2.0.1", features = [ "full" ] }
serde_json = "1.0.138"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
url = "2.5.4"
console = "0.15.10"
exitcode = "1.1.2"
bitcoin = { version = "0.32.5", features = ["default", "serde"] }
regex = "1.11.1"
governor = "0.8.0"
base64 = "0.22.1"
futures = "0.3.31"
num_cpus = "1.16.0"
bitcoincore-rpc-json = "0.19.0"
duckdb = { version = "1.2.0", features = ["bundled", "parquet"] }
reqwest = { version = "0.12.12", features = ["rustls-tls", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["rustls"] }
clickhouse = { version = "0.13.1", features = ["uuid"] }
clap = { version = "4.5.30", features = ["cargo", "derive", "env"] }
uuid = { version = "1.13.2", features = ["v4", "fast-rng"] }
tracing = "0.1.41"
sha2 = "0.10.8"
base58 = "0.2.0"
dirs = "6.0.0"

[dependencies.sea-orm]
version = "1.1.5"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
