[package]
name = "barreleye-indexer"
publish = false
description = "Open-source blockchain analytics."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.2.0-alpha.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"
workspace = ".."

[dependencies]
barreleye-common = { path = "../common", version = "0.2.0-alpha.0" }
eyre = "0.6.12"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.122"
async-trait = "0.1.81"
bitcoin = { version = "0.32.2", features = ["serde"] }
console = "0.15.8"
governor = "0.6.3"
base64 = "0.22.1"
regex = "1.10.6"
bitcoincore-rpc-json = "0.19.0"
derive_more = "0.99.18"
log = "0.4.22"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"] }
tracing = "0.1.40"

[dependencies.sea-orm]
version = "1.0.0"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
