[package]
name = "barreleye-indexer"
publish = false
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
workspace = ".."

[dependencies]
barreleye-common = { path = "../common", version = "0.2.0" }
eyre = "0.6.12"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.135"
async-trait = "0.1.85"
bitcoin = { version = "0.32.5", features = ["serde"] }
console = "0.15.10"
governor = "0.8.0"
base64 = "0.22.1"
regex = "1.11.1"
bitcoincore-rpc-json = "0.19.0"
derive_more = { version = "1.0.0", features = [ "full" ] }
log = "0.4.22"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12.12", features = ["rustls-tls", "json"] }
tracing = "0.1.41"
futures = "0.3.31"

[dependencies.sea-orm]
version = "1.1.3"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
