[package]
name = "barreleye-indexer"
publish = false
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.83"
workspace = ".."

[dependencies]
barreleye-common = { path = "../common", version = "0.2.0" }
eyre = "0.6.12"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
tracing = "0.1.41"
futures = "0.3.31"

[dependencies.sea-orm]
version = "1.1.4"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
