[package]
name = "barreleye-indexer"
description = "Open-source blockchain analytics."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2021"
workspace = ".."

[dependencies]
eyre = "0.6.8"
serde = "1.0.155"
serde_json = "1.0.94"
async-trait = "0.1.66"
bitcoin = "0.29.2"
console = "0.15.5"
governor = "0.5.1"
base64 = "0.21.0"
regex = "1.7.1"
bitcoincore-rpc-json = "0.16.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.14", features = ["rustls-tls"] }
num-format = { version = "0.4.4", features = ["with-system-locale"] }

barreleye-common = { path = "../common", version = "0.0.1" }

[dependencies.sea-orm]
version = "0.11.1"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls"
]
