[package]
name = "barreleye-server"
publish = false
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT"
edition = "2021"
rust-version = "1.81"
workspace = ".."

[dependencies]
barreleye-common = { path = "../common", version = "0.2.0" }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
eyre = "0.6.12"
axum = "0.7.6"
axum-extra = { version = "0.9.4", features = ["query"] }
derive_more = { version = "1.0.0", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
console = "0.15.8"
serde_json = "1.0.128"
hyper = "1.4.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"

[dependencies.sea-orm]
version = "1.0.1"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
