[package]
name = "barreleye-server"
publish = false
description = "Multi-chain blockchain indexer and explorer."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.org"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.83"
workspace = ".."

[dependencies]
barreleye-common = { path = "../common", version = "0.2.0" }
tokio = { version = "1.43.0", features = ["full"] }
eyre = "0.6.12"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["query"] }
derive_more = { version = "1.0.0", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.136"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"

[dependencies.sea-orm]
version = "1.1.4"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-json"
]
